crates/dayseam-macros/tests/trybuild/fail/empty_repair_name.stderr
error: `serde_default_audit(repair = "…")` requires a non-empty repair name that matches a registered `SerdeDefaultRepair::name()`
  --> tests/trybuild/fail/empty_repair_name.rs:15:5
   |
15 |     #[serde_default_audit(repair = "")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
